tests/forge/div_zero.expected
Runtime error: Division by zero
  at tests/forge/div_zero.fg:6:20
  in proc main() at line 3
