tests/forge/div_zero.fg
# Division by zero test

proc main() -> void:
    var x: int = 10
    var y: int = 0
    var z: int = x / y
    print(z)

